src/css/navbar.css
/* ---------- HEADER AND NAV SECTION ---------- */
header {
    background: transparent;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    padding: 20px 100px 20px 100px;
    z-index: 1000;
    box-sizing: border-box;
    display: flex;
    align-items: center;
    justify-content: flex-start;
    gap: 24px;
}

#backToTopBtn {
    display: none;
    position: fixed;
    bottom: 20px;
    right: 30px;
    z-index: 99;
    border: none;
    outline: none;
    background-color: #000000;
    color: white;
    cursor: pointer;
    padding: 15px;
    border-radius: 10px;
    font-size: 18px;
    transition: 2s all ease-in-out;
}

#backToTopBtn:hover {
    background-color: #555;
}

.logo-image {
    filter: brightness(0) invert(1);
}

nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    margin: 0 auto;
    height: 80px;
    box-sizing: border-box;
}

.nav-logo {
    display: flex;
    align-items: center;
    margin-right: 60px;
}

.nav-logo img {
    height: 48px;
    width: 48px;
    object-fit: cover;
}

.nav-links {
    display: flex;
    gap: 80px;
    list-style: none;
    margin: 0;
    padding: 0;
    justify-content: center;
    align-items: center;
}

.nav-link {
    text-decoration: none;
    color: white;
    font-size: 18px;
    transition: color 0.2s;
    padding: 8px 0;
    border-bottom: 2px solid transparent;
}

.modal {
    position: fixed;
    top: 10vh;
    left: 50%;
    transform: translateX(-50%);
    z-index: 99999;
    background-color: white;
    border-radius: 20px;
    padding: 0px 20px 20px 20px;
    overflow-y: auto;

    width: 90vw;
    max-width: 1400px;
    max-height: 80vh;

    opacity: 0;
    pointer-events: none;
    transition: opacity 0.3s ease;
    box-shadow: 10px 10px #29002e80;
}

.modal.open {
    opacity: 1;
    pointer-events: auto;
    display: block;
}

.modal .modal-inner .button-container {
    position: sticky;
    top: 5px;
    right: 0%;
}

.modal .modal-inner .button-container button {
    margin: 10px 0;
}

.gallery-random {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 10px;
}

.gallery-random img {
    max-width: 100%;
    height: auto;
    object-fit: cover;
    border-radius: 12px;
    flex: 1 1 150px;
    max-height: 150px;
    transition: all 0.3s ease-in-out;
}

.gallery-random img:hover {
    transform: scale(1.1);
}


.chef-modal {
    position: fixed;
    top: 10vh;
    left: 50%;
    transform: translateX(-50%);
    z-index: 9999;
    background-color: white;
    border-radius: 20px;
    overflow-y: auto;
    width: 90vw;
    max-width: 1400px;
    max-height: 80vh;
    opacity: 0;
    pointer-events: none;
    overflow: visible;
    transition: opacity 0.3s ease;
    box-shadow: 10px 10px #29002e80;
}

.chef-modal.open {
    opacity: 1;
    pointer-events: auto;
    display: block;
}

.modal-inner-wrapper {
    position: relative;
    /* important */
    padding-top: 80px;
    /* space for floating image */
}

.image-cont {
    position: absolute;
    top: -60px;
    left: 50%;
    transform: translateX(-50%);
    width: 520px;
    height: 120px;
    background-image: url('/Images/chef-image.webp');
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    z-index: 10000;
    pointer-events: none;
    filter: invert(60%) sepia(96%) saturate(650%) hue-rotate(5deg) brightness(92%) contrast(100%);
}


.chef-container {
    padding: 35px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    text-align: left;
    gap: 50px;
}

.chef-container .chef-image img {
    width: 300px;
    height: 300px;
    object-fit: cover;
    border-radius: 50%;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
}

.nav-link.active,
.nav-link:hover {
    color: #ffffff;
    border-bottom: 2px solid #ffffff;
}

.nav-buttons {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 18px;
    letter-spacing: 0.5px;
    font-weight: 400;
    gap: 16px;
}

.nav-buttons .contact {
    text-decoration: none;
    color: black;
    background: #ffffff;
    padding: 10px 28px;
    border: none;
    padding-top: 14px;
    padding-bottom: 14px;
    font-weight: 600;
    font-size: 16px;
    transition: background 0.2s, color 0.2s;
}

.nav-buttons .contact:hover {
    color: black;
    background: rgb(226, 226, 226);
}

/* Burger styles */
.nav-burger {
    display: none;
    flex-direction: column;
    gap: 5px;
    cursor: pointer;
    position: static;
    margin-left: auto;
    z-index: 1100;
}

.nav-burger span {
    width: 28px;
    height: 3px;
    background: white;
    display: block;
    border-radius: 2px;
    transition: all 0.3s ease;
    transform-origin: center;
}

.header {
    transition: background 0.3s ease, box-shadow 0.3s ease;
}

.header.scrolled {
    background: #243231;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
}

/* Media Queries */
@media (max-width: 900px) {
    nav {
        padding: 0 16px;
    }

    .nav-links {
        gap: 20px;
    }
}

@media (max-width: 768px) {


    .modal .modal-inner .button-container {
        position: sticky;
        background-color: white;
        z-index: 1001;
    }

    .gallery-random img {
        max-height: 120px;
        flex-basis: 45%;
        /* 2 images per row approximately */
    }

    .modal {
        width: 95vw;
        max-width: 90vw;
        max-height: 80vh;
        top: 5vh;
        scroll-behavior: smooth;
    }

    .nav-burger {
        display: flex;
    }

    header {
        flex-direction: row;
        justify-content: space-around;
        align-items: center;
        gap: 0;
    }

    /* .nav-burger {
        margin-left: auto;
        position: static;
    } */

    nav {
        display: none;
        flex-direction: column;
        align-items: center;
        background: transparent;
        padding: 100px 20px 20px;
        height: auto;
        position: absolute;
        background-color: #243231a8;
        backdrop-filter: blur(2px);
        top: 0;
        left: 0;
        right: 0;
        z-index: 1000;
    }

    nav.open {
        display: flex;
    }

    .nav-burger {
        display: flex;
        flex-direction: column;
        gap: 5px;
        cursor: pointer;
        z-index: 1100;
    }

    .nav-burger span {
        width: 28px;
        height: 3px;
        background: white;
        border-radius: 2px;
        transition: all 0.3s ease;
        transform-origin: center;
    }

    /* Burger -> X Animation */
    .nav-burger.open span:nth-child(1) {
        transform: rotate(45deg) translateY(10px);
    }

    .nav-burger.open span:nth-child(2) {
        opacity: 0;
    }

    .nav-burger.open span:nth-child(3) {
        transform: rotate(-45deg) translateY(-12px);
    }

    .nav-links {
        flex-direction: column;
        align-items: center;
        gap: 30px;
        width: 100%;
        margin-bottom: 10px;
        color: #000;
    }

    .nav-link {
        font-size: 24px;
        padding: 10px 0;
        color: #ffffff;
        font-weight: 600;
        width: 100%;
        text-align: center;
        border-bottom: 2px solid transparent;
        transition: color 0.2s, border-bottom 0.2s;
    }

    .nav-buttons {
        flex-direction: column;
        align-items: center;
        width: 100%;
        gap: 12px;
        margin-top: 16px;
    }

    #main-nav {
        opacity: 0;
        pointer-events: none;
        transform: translateY(-20px);
        transition: opacity 0.4s ease, transform 0.4s ease;
    }

    #main-nav.open {
        opacity: 1;
        pointer-events: auto;
        transform: translateY(0);
    }
}

